tests/ui/errors/issue-140578-span-format_args.rs
fn main() {
  println!("{:?} {a} {a:?}", [], a = 1 + 1);
  //~^ ERROR type annotations needed
}
